load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.contract",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.any",
        "@boost.assert",
        "@boost.config",
        "@boost.core",
        "@boost.exception",
        "@boost.function",
        "@boost.function_types",
        "@boost.mpl",
        "@boost.optional",
        "@boost.preprocessor",
        "@boost.smart_ptr",
        "@boost.static_assert",
        "@boost.thread",
        "@boost.type_traits",
        "@boost.typeof",
        "@boost.utility",
    ],
)
